chore(semvar): add cocogitto config

--- a/cog.toml
+++ b/cog.toml
@@ -1,9 +1,16 @@
 from_latest_tag = false
 ignore_merge_commits = false
 generate_mono_repository_global_tag = true
-branch_whitelist = []
+branch_whitelist = [
+  "main",
+  "release/**"
+]
 skip_untracked = false
-pre_bump_hooks = []
+pre_bump_hooks = [
+    "cargo build --release",
+    "echo 'bumping from {{latest}} to {{version}}'",
+    "cargo bump {{version}}",
+]
 post_bump_hooks = []
 pre_package_bump_hooks = []
 post_package_bump_hooks = []
@@ -11,6 +18,11 @@ post_package_bump_hooks = []
 [git_hooks]
 
 [commit_types]
+refactor = { changelog_title = "", omit_from_changelog = true }
+style = { changelog_title = "", omit_from_changelog = true }
+chore = { changelog_title = "", omit_from_changelog = true }
+perf = { changelog_title = "", omit_from_changelog = true }
+test = { changelog_title = "", omit_from_changelog = true }
 
 [changelog]
 path = "CHANGELOG.md"
