chore(gitflow): build release ci yml; cog init

--- a/cog.toml
+++ b/cog.toml
@@ -1,17 +1,21 @@
+skip_untracked = false
 from_latest_tag = false
 ignore_merge_commits = false
 generate_mono_repository_global_tag = true
+
 branch_whitelist = [
   "main",
   "release/**"
 ]
-skip_untracked = false
+
 pre_bump_hooks = [
     "cargo build --release",
-    "echo 'bumping from {{latest}} to {{version}}'",
-    "cargo bump {{version}}",
+    "echo 'bumping from {{latest}} to {{version}}'",   
+    "cargo set-version {{version}}"
 ]
+
 post_bump_hooks = []
+
 pre_package_bump_hooks = []
 post_package_bump_hooks = []
 
