--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 # release ci: build linux binaries and attach to release with SHA256
 
-name: build and release
+name: build
 
 on:
   workflow_dispatch:
-  release:
-    types: [ created ]
+    release:
+      types: [ published ]
 
 permissions:
   contents: write
@@ -44,7 +44,7 @@ jobs:
         if: matrix.platform.os_name != 'Windows-x86_64'
       - name: Generate SHA-256 of uncompressed binary
         run: shasum -a 256 target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }} | cut -d ' ' -f 1 > target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}.sha256
-      - name: Compress binary and package files
+      - name: Compress binary
         run: tar -cJf target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}.tar.xz target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}
       - name: Release binary and SHA-256 checksum to GitHub
         uses: softprops/action-gh-release@v1
