--- a/cog.toml
+++ b/cog.toml
@@ -1,6 +1,6 @@
 skip_untracked = false
 from_latest_tag = false
-ignore_merge_commits = false
+ignore_merge_commits = true
 generate_mono_repository_global_tag = true
 
 branch_whitelist = [
@@ -22,11 +22,6 @@ post_package_bump_hooks = []
 [git_hooks]
 
 [commit_types]
-refactor = { changelog_title = "", omit_from_changelog = true }
-style = { changelog_title = "", omit_from_changelog = true }
-chore = { changelog_title = "", omit_from_changelog = true }
-perf = { changelog_title = "", omit_from_changelog = true }
-test = { changelog_title = "", omit_from_changelog = true }
 
 [changelog]
 path = "CHANGELOG.md"
