--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,9 @@
+# release ci: create cocogitto semantic version release + changelog, enforce conventional commit compliance
+# executed when a release commit is made on main which pulls in latest and tested dev
+# triggers build yml when release is published, which attaches `latest` and {version} tagged release builds and sha256 checksums
+
+name: release
+
 on:
   workflow_dispatch:
     branches: main
@@ -31,8 +37,8 @@ jobs:
         uses: oknozor/cocogitto-action@v3
         with:
           release: true
-          git-user: ${{ secrets.GITHUB_USERNAME }}
-          git-user-email: ${{ secrets.GITHUB_EMAIL }}
+          git-user: ${{ secrets.GIT_USER }}
+          git-user-email: ${{ secrets.GIT_EMAIL }}
 
       - name: Generate Changelog
         run: cog changelog --at ${{ steps.release.outputs.version }} -t full_hash > GITHUB_CHANGELOG.md
