chore(nextflow): change to nested production params

--- a/nextflow.config
+++ b/nextflow.config
@@ -51,10 +51,28 @@ params {
         }
     }
 
-    
-    // =============================================
+    production {
+        enabled = false
+        sample_sheet = null
+        api {
+            enabled = true
+            url = "CEREBRO_API_URL"
+            token = "CEREBRO_API_TOKEN"
+
+            upload {
+                enabled = true
+                team = null
+                db = null
+                project = null
+            }
+
+        }
+    }
+
+
+    // =====================================================
     // Databases and references for taxonomic classification
-    // =============================================
+    // =====================================================
 
     database {
 
