--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ anstyle = "1.0.1"
 tectonic = { version = "0.14.1", optional = true }
 actix-web-httpauth = "0.8.0"
 memchr = "2.6.2"
+notify = { version = "6.1.1", features = ["serde"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.1"
