--- a/templates/report/template.toml
+++ b/templates/report/template.toml
@@ -21,7 +21,7 @@ disclaimer                  = """
 This metagenomics assay is a research-only assay, under ongoing development, and 
 should only be used in addition to usual diagnostic testing algorithms. The test has been performed using an
 unapproved IVD medical device that has not been evaluated for quality, safety or performance by the
-Therapeutic Goods Administration. Results are not  sufficient to rule in or out causative pathogens, and 
+Therapeutic Goods Administration. Results are not sufficient to rule in or out causative pathogens, and 
 should not be used as the basis for clinical management decisions. Methods used for this analysis have 
 not yet been validated according to the current NPAAC standards and results should be interpreted accordingly.
 NATA/RCPA accreditation does not cover the performance of this service.
@@ -29,13 +29,19 @@ NATA/RCPA accreditation does not cover the performance of this service.
 
 # Authorisation section
 
-[[authorisation]]
+[authorisation]
+
+issuing_laboratory_text     = "Issued by the Victorian Infectious Diseases Reference Laboratory (VIDRL), 792 Elizabeth St, Melbourne VIC 3004." 
+report_identifier_text      = "Report identification with MetaGP: XXXX-XXXX-XXXX-XXXX"
+
+
+[[authorisation.signature]]
 name                        = "Dr. Chuan Lim"
 position                    = "Acting Director"
 institution                 = "VIDRL"
 
 
-[[authorisation]]
+[[authorisation.signature]]
 name                        = "Dr. Prashanth Ramachandran"
 position                    = "Neurologist"
 institution                 = "Williamson Research Group"
