chore(report): linkage to application interface

--- a/templates/report/report_fillable.toml
+++ b/templates/report/report_fillable.toml
@@ -4,7 +4,7 @@
 
 [template]
 file                        = "report.hbs"                        # if path does not start with '/' it is relative to this file 
-logo                        = "vidrl.png"                         # if path does not start with '/' it is relative to this file
+logo                        = "logo.png"                         # if path does not start with '/' it is relative to this file
 name                        = "mgp-cerebro-report-v1.0"
 version                     = "v1.0"
 description                 = "LaTeX template for Cerebro Report"
@@ -37,8 +37,9 @@ NATA/RCPA accreditation does not cover the performance of this service.
 [template.authorisation]
 
 issuing_laboratory_text     = "Issued by the Victorian Infectious Diseases Reference Laboratory (VIDRL), 792 Elizabeth St, Melbourne VIC 3004." 
-report_identifier_text      = "Report identification with MetaGP: XXXX-XXXX-XXXX-XXXX"
+report_identifier_text      = "Report identifier for the MetaGP project: "
 
+# report_identifier         = ""
 
 [[template.authorisation.signature]]
 name                          = "Dr. Chuan Lim"
@@ -79,16 +80,16 @@ date_collected              = ""
 date_received               = ""
 specimen_type               = ""
 reporting_laboratory        = ""
-reporting_date              = "2023-01-01"
-reporting_location          = "Melbourne"
+reporting_date              = ""
+reporting_location          = ""
 
 [patient.result]
 toml                        = ""
 
-review_date                 = "Friday, 4th of August 2023"    
+review_date                 = ""    
 negative                    = false            
 organism                    = "Cryptococcus gattii"
-contact                     = "Dr. Mycroft Canner, VIDRL"
+contact                     = ""
 comments                    = "No further comments."
 actions                     = "No actions were taken."
 
