--- a/templates/stack/docker/Dockerfile.server
+++ b/templates/stack/docker/Dockerfile.server
@@ -32,14 +32,12 @@ RUN git clone --depth=1 -b {{{ revision }}} https://github.com/esteinig/cerebro 
 {{/if}}
 
 
-RUN cargo build --release --features pdf
-RUN mkdir -p /opt/cerebro/bin && cp target/release/cerebro /opt/cerebro/bin
-
 ENV PATH="${PATH}:/opt/cerebro/bin"
+RUN cargo build --release --features pdf
+RUN cp target/release/cerebro /opt/cerebro/bin
+WORKDIR /opt/cerebro
 
-# Generate the test report with Tectonic so that all LaTeX packages are downloaded prior to 
-# launching the container and using the reporting functions for the first time - otherwise
-# the first request for a report will take a long time to complete
+RUN cerebro report compile --base-config /usr/src/cerebro/templates/report/report.toml --output test.pdf --pdf && rm test.pdf
 
 
-# RUN cerebro report --base-config templates/report/report.toml --output test.pdf --pdf && rm test.pdf
+# USER IS CURRENTLY ROOT BECAUSE OF TECTONIC DEPENDENCIES - CHANGE THIS
