chore(stack): add subdomain specs for multiple instance deployment; change template folder compose mounts

--- a/templates/report/template.toml
+++ b/templates/report/template.toml
@@ -43,5 +43,5 @@ institution                 = "VIDRL"
 
 [[authorisation.signature]]
 name                        = "Dr. Prashanth Ramachandran"
-position                    = "Neurologist"
+position                    = "Clinical Metagenomics Research Fellow"
 institution                 = "Williamson Research Group"
