--- a/templates/stack/docker/docker-compose.yml
+++ b/templates/stack/docker/docker-compose.yml
@@ -54,11 +54,8 @@ services:
       - 8000
     volumes:
       {{#if dev }}
-      # Path mount for application in development
+      # Path mount for linked repository in development deployment (local dev)
       - {{{ dev }}}/app:/home/node/app
-      # {{else}}
-      # # Volume mount for application in production
-      # - cerebro_app:/home/node/app
       {{/if}}
       - {{{ outdir }}}/cerebro/app.env:/home/node/app/.env:ro
     networks:
@@ -75,11 +72,11 @@ services:
       traefik.enable: "true"
       traefik.docker.network: "proxy"
       {{#if traefik.is_localhost }}
-      traefik.http.routers.cerebro-app.rule: "Host(`app.{{{ traefik.localhost.domain }}}`)"
+      traefik.http.routers.cerebro-app.rule: "Host(`{{{ traefik.app_subdomain }}}.{{{ traefik.localhost.domain }}}`)"
       traefik.http.routers.cerebro-app.tls: "{{ traefik.localhost.tls }}"
       traefik.http.routers.cerebro-app.entrypoints: "{{{ traefik.localhost.entrypoint }}}"
       {{else}}
-      traefik.http.routers.cerebro-app.rule: "Host(`app.{{{ traefik.web.domain }}}`)"
+      traefik.http.routers.cerebro-app.rule: "Host(`{{{ traefik.app_subdomain }}}.{{{ traefik.web.domain }}}`)"
       traefik.http.routers.cerebro-app.entrypoints: "https"
       traefik.http.routers.cerebro-app.middlewares: "default@file"
       traefik.http.routers.cerebro-app.tls.certresolver: "letsEncrypt"
@@ -101,16 +98,14 @@ services:
     expose:
       - 8080
     volumes:
-      {{#if dev }}
-      # Path mount for application in development
+       {{#if dev }}
+      # Path mount of linked repository in development deployment
       - {{{ dev }}}:/usr/src/cerebro
-      - {{{ dev }}}/templates/email:/data/templates/email:ro
-      - {{{ dev }}}/templates/report:/data/templates/report:ro
+      - {{{ dev }}}/templates:/data/templates:ro
       {{else}}
       # Volume mount for application in production deployment
       - cerebro_api:/data
-      - {{{ outdir }}}/templates/email:/data/templates/email:ro
-      - {{{ outdir }}}/templates/report:/data/templates/report:ro
+      - {{{ outdir }}}/templates:/data/templates:ro
       {{/if}}
     networks:
       - cerebro
@@ -129,11 +124,11 @@ services:
       traefik.enable: "true"
       traefik.docker.network: "proxy"
       {{#if traefik.is_localhost }}
-      traefik.http.routers.cerebro-api.rule: "Host(`api.{{{ traefik.localhost.domain }}}`)"
+      traefik.http.routers.cerebro-api.rule: "Host(`{{{ traefik.api_subdomain }}}.{{{ traefik.localhost.domain }}}`)"
       traefik.http.routers.cerebro-api.tls: "{{ traefik.localhost.tls }}"
       traefik.http.routers.cerebro-api.entrypoints: "{{{ traefik.localhost.entrypoint }}}"
       {{else}}
-      traefik.http.routers.cerebro-api.rule: "Host(`api.{{{ traefik.web.domain }}}`)"
+      traefik.http.routers.cerebro-api.rule: "Host(`{{{ traefik.api_subdomain }}}.{{{ traefik.web.domain }}}`)"
       traefik.http.routers.cerebro-api.entrypoints: "https"
       traefik.http.routers.cerebro-api.middlewares: "default@file"
       traefik.http.routers.cerebro-api.tls.certresolver: "letsEncrypt"
