chore(stack): add git repo state to app footer

--- a/templates/stack/docker/docker-compose.yml
+++ b/templates/stack/docker/docker-compose.yml
@@ -47,8 +47,8 @@ services:
     # Development run server - DO NOT RUN IN PRODUCTION
     command: npm run dev
     {{else}}
-    # Production run of build
-    command: node -r dotenv/config build
+    # Production run of build - todo: show latest commit and branch at runtime
+    command: bash -c 'export PUBLIC_CEREBRO_APP_REVISION="$(git -C /home/node/cerebro name-rev --tags --name-only $(git -C /home/node/cerebro rev-parse HEAD)) @ $(git -C /home/node/cerebro rev-parse --abbrev-ref HEAD) $(git -C /home/node/cerebro show --oneline -s |  cut -d" " -f1)" && node -r dotenv/config build'
     {{/if}}
     expose:
       - 8000
@@ -58,6 +58,7 @@ services:
       - {{{ dev }}}/app:/home/node/app
       {{/if}}
       - {{{ outdir }}}/cerebro_api/app.env:/home/node/app/.env:ro
+      - {{{ outdir }}}/cerebro:/home/node/cerebro:ro  # host the repository for updates to app env tracking dev branch
     networks:
       - cerebro
       - proxy
