--- a/templates/stack/docker/docker-compose.yml
+++ b/templates/stack/docker/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     # Development run server - DO NOT RUN IN PRODUCTION
     command: npm run dev
     {{else}}
-    # Production run of build - todo: show latest commit and branch at runtime
+    # Production run of build - show latest tag, branch, commit of deployed repository
     command: bash -c 'export PUBLIC_CEREBRO_APP_REVISION="$(git -C /home/node/cerebro name-rev --tags --name-only $(git -C /home/node/cerebro rev-parse HEAD)) @ $(git -C /home/node/cerebro rev-parse --abbrev-ref HEAD) $(git -C /home/node/cerebro show --oneline -s |  cut -d" " -f1)" && node -r dotenv/config build'
     {{/if}}
     expose:
@@ -95,7 +95,11 @@ services:
       {{/if}}
       dockerfile: {{{ outdir }}}/docker/Dockerfile.server
     restart: unless-stopped
+    {{#if dev}}
     command: cerebro stack run-server --host 0.0.0.0 --port 8080 --threads 8
+    {{else}}
+    command: cargo watch -w .trigger -x "build && target/debug/cerebro stack run-server --host 0.0.0.0 --port 8080 --threads 8"
+    {{/if}}
     expose:
       - 8080
     volumes:
