--- a/templates/stack/docker/docker-compose.yml
+++ b/templates/stack/docker/docker-compose.yml
@@ -69,11 +69,11 @@ services:
       traefik.enable: "true"
       traefik.docker.network: "proxy"
       {{#if traefik.is_localhost }}
-      traefik.http.routers.cerebro-app.rule: "Host(`{{{ traefik.app_subdomain }}}.{{{ traefik.localhost.domain }}}`)"
+      traefik.http.routers.cerebro-app.rule: "Host(`{{{ traefik.subdomain.app }}}.{{{ traefik.localhost.domain }}}`)"
       traefik.http.routers.cerebro-app.tls: "{{ traefik.localhost.tls }}"
       traefik.http.routers.cerebro-app.entrypoints: "{{{ traefik.localhost.entrypoint }}}"
       {{else}}
-      traefik.http.routers.cerebro-app.rule: "Host(`{{{ traefik.app_subdomain }}}.{{{ traefik.web.domain }}}`)"
+      traefik.http.routers.cerebro-app.rule: "Host(`{{{ traefik.subdomain.app }}}.{{{ traefik.web.domain }}}`)"
       traefik.http.routers.cerebro-app.entrypoints: "https"
       traefik.http.routers.cerebro-app.middlewares: "default@file"
       traefik.http.routers.cerebro-app.tls.certresolver: "letsEncrypt"
@@ -124,11 +124,11 @@ services:
       traefik.enable: "true"
       traefik.docker.network: "proxy"
       {{#if traefik.is_localhost }}
-      traefik.http.routers.cerebro-api.rule: "Host(`{{{ traefik.api_subdomain }}}.{{{ traefik.localhost.domain }}}`)"
+      traefik.http.routers.cerebro-api.rule: "Host(`{{{ traefik.subdomain.api }}}.{{{ traefik.localhost.domain }}}`)"
       traefik.http.routers.cerebro-api.tls: "{{ traefik.localhost.tls }}"
       traefik.http.routers.cerebro-api.entrypoints: "{{{ traefik.localhost.entrypoint }}}"
       {{else}}
-      traefik.http.routers.cerebro-api.rule: "Host(`{{{ traefik.api_subdomain }}}.{{{ traefik.web.domain }}}`)"
+      traefik.http.routers.cerebro-api.rule: "Host(`{{{ traefik.subdomain.api }}}.{{{ traefik.web.domain }}}`)"
       traefik.http.routers.cerebro-api.entrypoints: "https"
       traefik.http.routers.cerebro-api.middlewares: "default@file"
       traefik.http.routers.cerebro-api.tls.certresolver: "letsEncrypt"
