--- a/templates/stack/stack.toml
+++ b/templates/stack/stack.toml
@@ -31,7 +31,7 @@ deploy                          = "localhost"    # localhost | web
 launch                          = true      
 
 [traefik.subdomain]
-api                             = "api"          # api.cerebro.localhost or api.example.org or dev.api.example.org ...
+api                             = "api"          # api.cerebro.localhost or api.example.org or api.dev.example.org ...
 app                             = "app"          # app.cerebro.localhost or app.example.org ...
 
 [traefik.network]
